Hide overflow to prevent scroll bars from appearing

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    overflow: hidden;
 }
 
 .container {
@@ -20,8 +21,6 @@ h1 {
     font-size: 24px;
     margin-bottom: 16px;
     color: #333;
-    /* font should be Helvetica*/
-
 }
 
 .menu {
@@ -48,7 +47,6 @@ h1 {
 .menu li a:hover {
     background-color: #ccc;
 }
-
 
 #goBackButton {
     position: absolute;
